--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.parboiled</groupId>
-    <artifactId>examples-json</artifactId>
+    <groupId>org.parboiled.json</groupId>
+    <artifactId>sql-peg-json</artifactId>
     <version>0.0.1</version>
     
     <scm>
-        <url>git@github.com:parboiled-experiments/examples-json.git</url>
+        <url>git@github.com:parboiled-experiments/sql-peg-json.git</url>
     </scm>
     
     <developers>
